--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2nd Assignment</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">    
 </head>
 
 <body>
@@ -35,9 +35,9 @@
                     </select>
                     <br><br>
 
-                    <textarea name="message" rows="10" cols="30"></textarea><br><br>
-
-                    <input type="submit" value="Submit">
+                    <textarea id="message" name="message" rows="10" cols="30"></textarea><br><br>
+                    <button type="button" onclick="submit()">Submit</button>
+                    <!--<input type="submit" value="Submit" onclick="submit()">-->
                 </form>
             </div>
 
@@ -48,5 +48,5 @@
     </div>
 
 </body>
-
+<script src="main.js"></script>
 </html>
