--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2nd Assignment</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js"></script>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">    
 </head>
 
 <body>
@@ -38,11 +37,12 @@
 
                     <label>Message:</label><br>
                     <textarea id="message" name="message" rows="10" cols="30"></textarea><br><br>
-                    <button type="button" onclick="sendData()">Send</button>
+                    <button id="send" type="button">Send</button>
                 </form>
             </div>
             <p></p>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
